--- a/TRALALERO.html
+++ b/TRALALERO.html
@@ -13,7 +13,8 @@
     Se creó el 13 de enero de 2025 en TikTok, por Burger Merda.
     Es la imagen generada por inteligencia artificial de un tiburón de 3 patas llevando zapatillas de marca Nike color azul en la playa.</h3>
 
-    <a href="BRAIMROT.html"><button>ATRAS</button></a>
+    <a href="index.html"><button>ATRAS</button></a>
 
 </body>
+
 </html>
